@@ -225,6 +225,7 @@
             <button class="button button-small button-secondary" type="button">button element</button>
 
             <h3>Disabled buttons</h3>
+            <p><strong>Important</strong>: Adding <code>disabled</code> as a class should be avoided on buttons, instead use the disabled attribute. Some examples below use classes to validate existing styling still works.</p>
 
             <a href="#" class="button disabled">button link</a>
             <button class="button disabled" type="button">button element</button>
